--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,9 @@
 	  <connection>scm:git:ssh://github.com/jenkinsci/crowdstrike-security-plugin.git</connection>
 	  <developerConnection>scm:git:ssh://git@github.com/jenkinsci/crowdstrike-security-plugin.git</developerConnection>
 	  <url>https://github.com/jenkinsci/crowdstrike-security-plugin</url>
-	  <tag>HEAD</tag>
+	  <tag>cs1.0.0</tag>
 	</scm>
-	<version>${revision}${changelist}</version>
+	<version>1.0.0</version>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
