--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,12 @@
 	<url>https://github.com/jenkinsci/crowdstrike-security-plugin</url>
 
 	<scm>
-	  <connection>scm:git:ssh://github.com/jenkinsci/crowdstrike-security-plugin.git</connection>
-	  <developerConnection>scm:git:ssh://git@github.com/jenkinsci/crowdstrike-security-plugin.git</developerConnection>
-	  <url>https://github.com/jenkinsci/crowdstrike-security-plugin</url>
-	  <tag>HEAD</tag>
+		<connection>scm:git:ssh://github.com/jenkinsci/crowdstrike-security-plugin.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/jenkinsci/crowdstrike-security-plugin.git</developerConnection>
+		<url>https://github.com/jenkinsci/crowdstrike-security-plugin</url>
+		<tag>HEAD</tag>
 	</scm>
-	<version>${revision}${changelist}</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -97,6 +97,16 @@
 			<version>2.9.1</version>
 		</dependency>
 	</dependencies>
+	<distributionManagement>
+		<repository>
+			<id>maven.jenkins-ci.org</id>
+			<url>https://repo.jenkins-ci.org/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>maven.jenkins-ci.org</id>
+			<url>https://repo.jenkins-ci.org/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 	<repositories>
 		<repository>
 			<id>repo.jenkins-ci.org</id>
