--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,10 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:ssh://github.com/jenkinsci/crowdstrike-security-plugin.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/jenkinsci/crowdstrike-security-plugin.git</developerConnection>
-		<url>https://github.com/jenkinsci/crowdstrike-security-plugin</url>
-		<tag>HEAD</tag>
+		<connection>scm:git:ssh://github.com/${gitHubRepo}.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/${gitHubRepo}.git</developerConnection>
+		<url>https://github.com/${gitHubRepo}</url>
+		<tag>${scmTag}</tag>
 	</scm>
 	<distributionManagement>
 		<repository>
@@ -49,6 +49,7 @@
 	<properties>
 		<revision>1.0.0</revision>
 		<changelist>-SNAPSHOT</changelist>
+		<gitHubRepo>jenkinsci/crowdstrike-security-plugin</gitHubRepo>
 		<jenkins.version>2.332.3</jenkins.version>
 		<hpi-plugin.version>3.25</hpi-plugin.version>
 
