--- a/pom.xml
+++ b/pom.xml
@@ -1,44 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
-				<configuration>
-					<release>8</release>
-					<showDeprecation>true</showDeprecation>
-					<showWarnings>true</showWarnings>
-					<source>10</source>
-					<target>10</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.jenkins-ci.tools</groupId>
-				<artifactId>maven-hpi-plugin</artifactId>
-				<version>3.25</version>
-				<configuration>
-					<minimumJavaVersion>8</minimumJavaVersion>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>4.44</version>
+		<version>4.48</version>
 		<relativePath />
 	</parent>
+
 	<groupId>io.jenkins.plugins</groupId>
 	<artifactId>crowdstrike-security</artifactId>
 	<packaging>hpi</packaging>
+
 	<name>CrowdStrike Security</name>
 	<description>
 		Enables assessment of Docker container images for vulnerabilities by sending them to CrowdStrike's Falcon Image Assessment module, pulling the report of vulnerabilities found.
 	</description>
 	<url>https://github.com/jenkinsci/crowdstrike-security-plugin</url>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+			<comments>A business-friendly OSS license</comments>
+		</license>
+	</licenses>
 
 	<scm>
 		<connection>scm:git:ssh://github.com/jenkinsci/crowdstrike-security-plugin.git</connection>
@@ -46,7 +33,28 @@
 		<url>https://github.com/jenkinsci/crowdstrike-security-plugin</url>
 		<tag>HEAD</tag>
 	</scm>
-	<version>1.2.2-SNAPSHOT</version>
+	<version>1.2.3-SNAPSHOT</version>
+	<distributionManagement>
+		<repository>
+			<id>maven.jenkins-ci.org</id>
+			<url>https://repo.jenkins-ci.org/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>maven.jenkins-ci.org</id>
+			<url>https://repo.jenkins-ci.org/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
+	<properties>
+		<changelist>-SNAPSHOT</changelist>
+		<gitHubRepo>jenkinsci/crowdstrike-security-plugin</gitHubRepo>
+		<jenkins.version>2.332.3</jenkins.version>
+
+		<spotbugs.effort>Max</spotbugs.effort>
+		<spotbugs.failOnError>true</spotbugs.failOnError>
+		<spotbugs.threshold>Low</spotbugs.threshold>
+	</properties>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -58,20 +66,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<properties>
-		<revision>1.0.0</revision>
-		<changelist>-SNAPSHOT</changelist>
-		<jenkins.version>2.319.1</jenkins.version>
-		<hpi-plugin.version>3.25</hpi-plugin.version>
-	</properties>
-	<licenses>
-		<license>
-			<name>Apache License, Version 2.0</name>
-			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-			<comments>A business-friendly OSS license</comments>
-		</license>
-	</licenses>
 	<dependencies>
 		<dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
@@ -84,7 +78,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20230227</version>
+			<version>20231013</version>
 		</dependency>
 		<dependency>
 			<groupId>org.freemarker</groupId>
@@ -97,16 +91,7 @@
 			<version>2.9.1</version>
 		</dependency>
 	</dependencies>
-	<distributionManagement>
-		<repository>
-			<id>maven.jenkins-ci.org</id>
-			<url>https://repo.jenkins-ci.org/releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>maven.jenkins-ci.org</id>
-			<url>https://repo.jenkins-ci.org/snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
+
 	<repositories>
 		<repository>
 			<id>repo.jenkins-ci.org</id>
@@ -119,4 +104,20 @@
 			<url>https://repo.jenkins-ci.org/public/</url>
 		</pluginRepository>
 	</pluginRepositories>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+				<configuration>
+					<showDeprecation>true</showDeprecation>
+					<showWarnings>true</showWarnings>
+					<source>21</source>
+					<target>21</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
