--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,9 @@
 	<properties>
 		<changelist>-SNAPSHOT</changelist>
 		<gitHubRepo>jenkinsci/crowdstrike-security-plugin</gitHubRepo>
-		<jenkins.version>2.332.3</jenkins.version>
+		<!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
+		<jenkins.baseline>2.332</jenkins.baseline>
+		<jenkins.version>${jenkins.baseline}.3</jenkins.version>
 
 		<spotbugs.effort>Max</spotbugs.effort>
 		<spotbugs.failOnError>true</spotbugs.failOnError>
@@ -59,7 +61,7 @@
 		<dependencies>
 			<dependency>
 				<groupId>io.jenkins.tools.bom</groupId>
-				<artifactId>bom-2.332.x</artifactId>
+				<artifactId>bom-${jenkins.baseline}.x</artifactId>
 				<version>1210.vcd41f6657f03</version>
 				<type>pom</type>
 				<scope>import</scope>
