--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
 			<groupId>com.cloudbees.jenkins.plugins</groupId>
 			<artifactId>kubernetes-credentials-provider</artifactId>
 			<version>${kubernetes-credentials-provider.version}</version>
+			<optional>true</optional>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
