--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
 					<target>21</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.jenkins-ci.tools</groupId>
+				<artifactId>maven-hpi-plugin</artifactId>
+				<version>3.34</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
