--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,9 @@
 		<connection>scm:git:ssh://github.com/jenkinsci/crowdstrike-security-plugin.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/jenkinsci/crowdstrike-security-plugin.git</developerConnection>
 		<url>https://github.com/jenkinsci/crowdstrike-security-plugin</url>
-		<tag>HEAD</tag>
+		<tag>crowdstrike-security-1.3.1</tag>
 	</scm>
-	<version>1.3.2-SNAPSHOT</version>
+	<version>1.3.1</version>
 	<distributionManagement>
 		<repository>
 			<id>maven.jenkins-ci.org</id>
