--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<url>https://github.com/jenkinsci/crowdstrike-security-plugin</url>
 		<tag>crowdstrike-security-1.3.1</tag>
 	</scm>
-	<version>1.3.1</version>
+	<version>1.3.2-SNAPSHOT</version>
 	<distributionManagement>
 		<repository>
 			<id>maven.jenkins-ci.org</id>
